2018-09-22  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/85603
	* trans-array.c (gfc_alloc_allocatable_for_assignment): Test
	the charlen backend_decl before using the VAR_P macro.

2018-09-22  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/85603
	* gfortran.dg/deferred_character_23.f90 : New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@264502 138bc75d-0d04-0410-961f-82ee72b054a4